--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <script>
 function myFunction(slide) {
-  location.replace("https://afikbar.github.io/Data-Gathering-Lab/NLP/${slide}/index.html")
+  location.replace(`https://afikbar.github.io/Data-Gathering-Lab/NLP/${slide}/index.html`)
 }
 </script>
 
