--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
 <script>
 function myFunction(slide) {
-  location.replace(`https://afikbar.github.io/Data-Gathering-Lab/NLP/${slide}/index.html`)
+    var win = window.open(`https://afikbar.github.io/Data-Gathering-Lab/NLP/${slide}/index.html`, '_blank');
 }
 </script>
 
