--- a/NLP/GNMT/index.html
+++ b/NLP/GNMT/index.html
@@ -63,18 +63,11 @@ human raters to rate translations in a three-way side-by-side comparison.</p></l
 3) translations by humans fluent in both languages.</p></div></aside></section>
 <section id="_additional_notes"><h2>Additional notes</h2><div class="paragraph"><p>Google used this beast to provide <strong>Zero-Shot translation</strong>.</p></div>
 <div class="imageblock" style=""><img src="../images/zero-shot.gif" alt="zero shot"></div>
-<aside class="notes"><div class="paragraph"><p>The proposed architecture requires no change in the base GNMT system, but instead uses an additional “token” at the beginning of the input sentence to specify the required target language to translate to.</p></div>
-<div class="paragraph"><p>In addition to improving translation quality, our method also enables “Zero-Shot Translation” — translation between language pairs never seen explicitly by the system.</p></div>
-<div class="paragraph"><p>Here’s how it works.
-Let’s say we train a multilingual system with Japanese⇄English and Korean⇄English examples, shown by the solid blue lines in the animation.
-Our multilingual system, with the same size as a single GNMT system, shares its parameters to translate between these four different language pairs.
-This sharing enables the system to transfer the “translation knowledge” from one language pair to the others.
-This transfer learning and the need to translate between multiple languages forces the system to better use its modeling power.</p></div>
-<div class="paragraph"><p>This inspired us to ask the following question: Can we translate between a language pair which the system has never seen before?
-An example of this would be translations between Korean and Japanese where Korean⇄Japanese examples were not shown to the system.</p></div>
-<div class="paragraph"><p>Impressively, the answer is yes — it can generate reasonable Korean⇄Japanese translations, even though it has never been taught to do so.
-We call this “zero-shot” translation, shown by the yellow dotted lines in the animation.
-To the best of our knowledge, this is the first time this type of transfer learning has worked in Machine Translation.</p></div></aside></section>
+<aside class="notes"><div class="ulist"><ul><li><p>No change in GNMT, additional "token" to specify target language</p></li><li><p>Improving translation &amp; “Zero-Shot Translation” — translation between language pairs never seen explicitly by the system.</p></li></ul></div>
+<div class="paragraph"><p>Here’s how it works.</p></div>
+<div class="ulist"><ul><li><p>Train on Japanese⇄English and Korean⇄English examples (<span class="blue">Solid blue</span>)</p></li><li><p>The system shares its trained parameters between four different language systems.</p></li><li><p>This sharing enables the system to transfer the “translation knowledge” from one language pair to the others.<br>
+This transfer learning and the need to translate between multiple languages forces the system to better use its modeling power.</p></li><li><p>Translate between language pair never seen before (between Korean and Japanese)</p></li><li><p>It can generate reasonable Korean⇄Japanese translations</p></li><li><p>Zero-Shot translation (<span class="yellow">yellow dotted lines</span>).</p></li></ul></div>
+<div class="paragraph"><p>To the best of our knowledge, this is the first time this type of transfer learning has worked in Machine Translation.</p></div></aside></section>
 <section id="_questions"><h2>Questions?</h2><div class="imageblock" style=""><img src="../images/que.gif" alt="que"></div></section></div></div><script src="node_modules/reveal.js/lib/js/head.min.js"></script><script src="node_modules/reveal.js/js/reveal.js"></script><script>Array.prototype.slice.call(document.querySelectorAll('.slides section')).forEach(function(slide) {
   if (slide.getAttribute('data-background-color')) return;
   // user needs to explicitly say he wants CSS color to override otherwise we might break custom css or theme (#226)
