--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 <div class="flex">
   <button class="block" onclick="myFunction('NLP/GNMT')">GNMT</button>
   <button class="block" onclick="myFunction('NLP/Lab_Slide')">NLP Lab</button>
+  <button class="block" onclick="myFunction('Final/Lab_Slide')">Final Task</button>
 </div>
-</div class="flex">
+<div class="flex">
     <button class="block" onclick="myFunction('Final/Lab_Slide')">Final Task</button>
 </div>
 
